# ur10_rg2_ros

./: LICENSE  README.md
robot_descriptions/: CMakeLists.txt  package.xml
robot_descriptions/controller/: arm_controller_ur10_vgs.yaml~
robot_descriptions/description/: arm_extras_ur10.urdf.xacro  arm_extras_ur10.urdf.xacro~  kinect.urdf.xacro  rg2.urdf.xacro  ur10_robot_rg2_arc.urdf.xacro  ur10_robot_rg2_arc.urdf.xacro~
robot_descriptions/launch/: controller_utils_ur10.launch  motion.launch~  storage.launch~  ur10.launch  ur10.launch~  ur10_upload.launch  ur10_upload.launch~  ur5.launch~  ur5_upload.launch~
robot_descriptions/worlds/: ur5.world  ur5.world~
ur10_rg2_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur10_rg2_moveit_config/config/: controllers.yaml  fake_controllers.yaml  ompl_planning.yaml  rgbd.yaml  sensors_kinect.yaml  ur10.srdf
ur10_rg2_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group.launch~  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.launch~  planning_pipeline.launch.xml  warehouse.launch  (+9 more)
ur_control/: CMakeLists.txt  package.xml  package.xml~
ur_control/launch/: camera.launch~  param.launch~  ur10_control.launch  ur10_control.launch~  ur5_control.launch~  ur5_planner.launch~
ur_control/scripts/: rg2_server_node.py
ur_control/srv/: Object.srv~  RG2.srv  RG2.srv~  RG2_Grip.srv  TestCalibration.srv~  UR5PoseGoal.srv~
ur_modern_driver/: CMakeLists.txt  package.xml
(+5 files in other folders)
